building skeleton of front page

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -5,17 +5,30 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
+      href="https://fonts.googleapis.com/css?family=Titillium+Web"
       rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="assets/framework.css"
     />
     <link
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="assets/main.css"
+      href="assets/css/framework.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="assets/css/main.css"
     />
   </head>
-  <body></body>
+  <body>
+    <nav class="col-xl-12 flex">
+      <a href="#" class="nav-link col-xl-4 heading">ESCROW</a>
+      <div class="col-xl-6 center-2">
+        <a href="#" class="nav-link col-xl-4"> Home</a>
+        <a href="#" class="nav-link col-xl-4"> Home</a>
+        <a href="#" class="nav-link col-xl-4"> Home</a>
+      </div>
+    </nav>
+  </body>
 </html>
