--- a/front_end/index.html
+++ b/front_end/index.html
@@ -22,13 +22,36 @@
     />
   </head>
   <body>
-    <nav class="col-xl-12 flex">
-      <a href="#" class="nav-link col-xl-4 heading">ESCROW</a>
-      <div class="col-xl-6 center-2">
-        <a href="#" class="nav-link col-xl-4"> Home</a>
-        <a href="#" class="nav-link col-xl-4"> Home</a>
-        <a href="#" class="nav-link col-xl-4"> Home</a>
+    <section class="col-xl-12 section-one">
+      <div class="flex center">
+        <nav class="flex col-xl-11">
+          <a href="#" class="nav-link-2 col-xl-4 heading">ESCROW</a>
+          <div class="nav-link-2 col-xl-4 center-2">
+            <a href="#" class="nav-link col-xl-4"> HOME</a>
+            <a href="#" class="nav-link col-xl-4"> HOME</a>
+            <a href="#" class="nav-link col-xl-4"> HOME</a>
+          </div>
+          <div class="nav-link col-xl-4 flex right">
+            <button class="btn btn-green col-xl-4">SIGN UP</button>
+            <button class="btn btn-light col-xl-4 offset-xl-1">LOG IN</button>
+          </div>
+        </nav>
       </div>
-    </nav>
+      <div class="flex center">
+        <div class="row col-xl-11">
+          <div class="flex-wrap col-xl-6 hero-text">
+            <div class="heading col-xl-12">
+              Escrow.io is a solution to buying and selling safely using
+              cryptocurrency
+            </div>
+            <p class="col-xl-12 extest">
+              Currently accepting Ethereum.
+            </p>
+            <button class="btn btn-green col-xl-3 center-2">Get Started</button>
+          </div>
+          <div class="col-xl-6"></div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
