extra styling done the dashboard

--- a/front_end/dashboard.html
+++ b/front_end/dashboard.html
@@ -54,7 +54,28 @@
             ><button class="btn btn-side-menu col-xl-12">Transactions</button>
           </div>
         </div>
-        <div class="col-xl-9 content"></div>
+        <div class="offset-xl-3 col-xl-9 content">
+          <div class="content-info">
+            <h2>Transactions</h2>
+            <p>You've got 2 new transactions</p>
+          </div>
+          <button class="row btn btn-row">
+            <div class="col-xl-1 flex-wrap center-3">
+              <img src="assets/images/user.jpg" />
+            </div>
+            <div class="col-xl-3 flex-wrap center-3">
+              <h2 class="col-xl-12">Adelina Thorsen</h2>
+              <p class="col-xl-12">Dec 16, 2017</p>
+            </div>
+            <div class="col-xl-8 flex-wrap center-3">
+              <h2 class="col-xl-12">Reminder - this month's payment</h2>
+              <p class="col-xl-12">
+                Hi Lucas, This is Adelina from customer support I just wanteed
+                to send you a reminder about...
+              </p>
+            </div>
+          </button>
+        </div>
       </div>
     </section>
   </body>
