Update section two of index

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -32,7 +32,7 @@
     <section class="col-xl-12 section-one">
       <div class="flex center">
         <nav class="flex col-xl-11">
-          <a href="#" class="nav-link-2 col-xl-4 heading">ESCROW</a>
+          <a href="#" class="nav-link-2 col-xl-4 heading"><img src="" alt=""></a>
           <div class="nav-link-2 col-xl-4 center-2">
             <a href="#" class="nav-link col-xl-4"> HOME</a>
             <a href="#" class="nav-link col-xl-4"> HOME</a>
@@ -56,9 +56,35 @@
             </p>
             <button class="btn btn-green col-xl-3 center-2">Get Started</button>
           </div>
-          <div class="col-xl-6"></div>
+          <div class="col-xl-6">
+
+          </div>
+
         </div>
       </div>
     </section>
+
+
+    <section class="col-xl-12 section-two">
+    <div class="flex center">
+      <div class="row col-xl-11">
+        <div class="flex-wrap col-xl-6 hero-text-two">
+          <div class="heading col-xl-12 flex-start">
+            How it works
+          </div>
+          <p class="col-xl-12 extest">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt blanditiis, 
+            iusto eius et autem qui harum rerum eum accusamus perferendis commodi doloremque 
+            numquam alias in repudiandae accusantium animi nihil nesciunt.
+          </p>
+        </div>
+        <div class="col-xl-6">
+
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   </body>
 </html>
