--- a/front_end/index.html
+++ b/front_end/index.html
@@ -67,12 +67,12 @@
 
     <section class="col-xl-12 section-two">
     <div class="flex center">
-      <div class="row col-xl-11">
-        <div class="flex-wrap col-xl-6 hero-text-two">
-          <div class="heading col-xl-12 flex-start">
+      <div class="row col-xl-11 top">
+        <div class="col-xl-6 hero-text-two">
+          <div class="heading col-xl-12 flex-top">
             How it works
           </div>
-          <p class="col-xl-12 extest">
+          <p class="col-xl-8 extest">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt blanditiis, 
             iusto eius et autem qui harum rerum eum accusamus perferendis commodi doloremque 
             numquam alias in repudiandae accusantium animi nihil nesciunt.
@@ -83,6 +83,34 @@
         </div>
 
       </div>
+    </div>
+
+    <div class="row col-xl-11 bottom">
+      <div class="flex-center">
+        <div class="col-xl-4">
+            <div class="heading col-xl-12">
+                How it works
+              </div>    
+        </div>
+
+        <div class="col-xl-4">
+            <div class="heading col-xl-12">
+                How it works
+              </div>
+
+        </div>
+
+        <div class="col-xl-4">
+            <div class="heading col-xl-12">
+                How it works
+              </div>
+    
+        </div>
+      </div>
+
+
+            
+
     </div>
   </section>
 
