started work on transaction.html

--- a/front_end/transaction.html
+++ b/front_end/transaction.html
@@ -47,29 +47,15 @@
             <h2>Transactions</h2>
             <p>You've got 2 new transactions</p>
           </div>
-          <button class="row btn btn-row">
-            <div class="col-xl-1 flex-wrap center-3">
-              <img src="assets/images/user.jpg" />
-            </div>
-            <div class="col-xl-3 flex-wrap center-3">
-              <h2 class="col-xl-12">Adelina Thorsen</h2>
-              <p class="col-xl-12">Dec 16, 2017</p>
-            </div>
-            <div class="col-xl-8 flex-wrap center-3">
-              <h2 class="col-xl-12">Reminder - this month's payment</h2>
-              <p class="col-xl-12">
-                Hi Lucas, This is Adelina from customer support I just wanteed
-                to send you a reminder about...
-              </p>
-            </div>
-          </button>
+          <h2 class="form-heading">Title:</h2>
+          <p class="data-box"></p>
         </div>
       </div>
     </section>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
   </body>
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"
+  ></script>
 </html>
