modifying user image

--- a/front_end/dashboard.html
+++ b/front_end/dashboard.html
@@ -33,7 +33,7 @@
       <div class="row col-xl-12">
         <div class="col-xl-3 side-menu">
           <div class="col-xl-12 flex center">
-            <img src="assets/images/user.jpg" alt="user-image" />
+            <img src="assets/images/user.png" alt="user-image" />
           </div>
           <p class="col-xl-12 side-menu-name">Philip Yirenkyi</p>
           <div class="col-xl-12 side-menu-links">
@@ -49,7 +49,7 @@
           </div>
           <button class="row btn btn-row">
             <div class="col-xl-1 flex-wrap center-3">
-              <img src="assets/images/user.jpg" />
+              <img src="assets/images/user.png" />
             </div>
             <div class="col-xl-3 flex-wrap center-3">
               <h2 class="col-xl-12">Adelina Thorsen</h2>
@@ -58,7 +58,7 @@
             <div class="col-xl-8 flex-wrap center-3">
               <h2 class="col-xl-12">Reminder - this month's payment</h2>
               <p class="col-xl-12">
-                Hi Lucas, This is Adelina from customer support I just wanteed
+                Hi Lucas, This is Adelina from customer support I just wanted
                 to send you a reminder about...
               </p>
             </div>
