partially finished work on transaction.css

--- a/front_end/transaction.html
+++ b/front_end/transaction.html
@@ -27,6 +27,12 @@
       media="screen"
       href="assets/css/main.css"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="assets/css/transaction.css"
+    />
   </head>
   <body>
     <section>
@@ -48,7 +54,28 @@
             <p>You've got 2 new transactions</p>
           </div>
           <h2 class="form-heading">Title:</h2>
-          <p class="data-box"></p>
+          <p class="data-box col-xl-7"></p>
+          <div class="row col-xl-12">
+            <div class="col-xl-6">
+              <h2>Seller Address:</h2>
+              <p class="data-box col-xl-7"></p>
+              <h2>Seller Name:</h2>
+              <p class="data-box col-xl-7"></p>
+            </div>
+            <div class="col-xl-6">
+              <h2>Buyer Address:</h2>
+              <p class="data-box col-xl-7"></p>
+              <h2>Buyer Name:</h2>
+              <p class="data-box col-xl-7"></p>
+            </div>
+          </div>
+          <h2>Contract creation date:</h2>
+          <p class="data-box col-xl-7"></p>
+          <h2>Amount due:</h2>
+          <p class="data-box col-xl-7"></p>
+          <div class="row col-xl-12 right">
+            <button class="col-xl-2 btn btn-green2">Make Payment</button>
+          </div>
         </div>
       </div>
     </section>
