worked on the profile.html

--- a/front_end/profile.html
+++ b/front_end/profile.html
@@ -73,7 +73,7 @@
               <p class="data-box col-xl-7"></p>
             </div>
           </div>
-          <div class="row col-xl-12 right">
+          <div class="row col-xl-12 left">
             <button class="col-xl-2 btn btn-green2">Make Changes</button>
           </div>
         </div>
