relationships for database tables and modified landing page

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -1,76 +1,134 @@
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Escrow | Hompeage</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Titillium+Web"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
 
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="assets/css/framework.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="assets/css/main.css"
-    />
-  </head>
-  <body>
-    <section class="col-xl-12 section-one">
-      <div class="flex center">
-        <nav class="flex col-xl-11">
-          <a href="#" class="nav-link-2 col-xl-4 heading"><img src="" alt=""></a>
-          <div class="nav-link-2 col-xl-4 center-2">
-            <a href="#" class="nav-link col-xl-4"> HOME</a>
-            <a href="#" class="nav-link col-xl-4"> HOME</a>
-            <a href="#" class="nav-link col-xl-4"> HOME</a>
-          </div>
-          <div class="nav-link col-xl-4 flex right">
-            <button class="btn btn-green col-xl-4">SIGN UP</button>
-            <button class="btn btn-light col-xl-4 offset-xl-1">LOG IN</button>
-          </div>
-        </nav>
-      </div>
-      <div class="flex center">
-        <div class="row col-xl-11">
-          <div class="flex-wrap col-xl-6 hero-text">
-            <div class="heading col-xl-12">
-              Escrow.io is a solution to buying and selling safely using
-              cryptocurrency
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Escrow | Hompeage</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+
+  <link rel="stylesheet" type="text/css" media="screen" href="assets/css/framework.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
+</head>
+
+<body>
+  <section class="col-xl-12 section-one">
+      <div class="col-xl-12 flex center login-container">
+          <div class="sign_up log_in  col-xl-3 flex-wrap center">
+            <h2 class="col-xl-11">Sign Up</h2>
+            <div class="inputs col-xl-11">
+              <p><input type="text" placeholder="username" class="col-xl-12"></p>
+              <p><input type="text" placeholder="email" class="col-xl-12"></p>
+              <p><input type="password" placeholder="password" class="col-xl-12"></p>
             </div>
-            <p class="col-xl-12 extest">
-              Currently accepting Ethereum.
-            </p>
-            <button class="btn btn-green col-xl-3 center-2">Get Started</button>
+            <div class="col-xl-12 flex center">
+              <input type="button" name="" id="" value="Log In" class="loginb col-xl-6">
+            </div>
+            <div class="forgot">
+              <a href="#">Already a member?</a>
+            </div>
           </div>
-          <div class="col-xl-6">
-
-          </div>
-
         </div>
+        
+        <div class="col-xl-12 flex center login-container">
+          <div class="sign_in log_in hidden col-xl-3 flex-wrap center">
+            <h2 class="col-xl-11">Log In</h2>
+            <div class="inputs col-xl-11">
+              <p><input type="text" placeholder="email" class="col-xl-12"></p>
+              <p><input type="password" placeholder="password" class="col-xl-12"></p>
+            </div>
+            <div class="col-xl-12 flex center">
+              <input type="button" name="" id="" value="Log In" class="loginb col-xl-6">
+            </div>
+            <div class="forgot">
+              <a href="#">Forgot password ?</a>
+              <a href="#" class="sign">Sign-Up</a>
+            </div>
+          </div>
+        </div>
+    <div class="flex center">
+      <nav class="flex col-xl-11">
+        <div href="#" class="nav-link-2 col-xl-4 heading logo"><img src="./assets/images/rag1.png" alt=""></div>
+        <div class="nav-link-2 col-xl-4 center-2">
+          <a href="#" class="nav-link col-xl-4"> HOME</a>
+          <a href="#" class="nav-link col-xl-4"> HOME</a>
+          <a href="#" class="nav-link col-xl-4"> HOME</a>
+        </div>
+        <div class="nav-link col-xl-4 flex right">
+          <button class="btn btn-green col-xl-4">SIGN UP</button>
+          <button class="btn btn-light col-xl-4 offset-xl-1">LOG IN</button>
+        </div>
+      </nav>
+    </div>
+    <div class="flex center">
+      <div class="row col-xl-11">
+        <div class="flex-wrap col-xl-6 hero-text">
+          <div class="heading col-xl-12">
+            Tranz is a solution to buying and selling safely using
+            cryptocurrency
+          </div>
+          <p class="col-xl-12 extest">
+            Currently accepting Ethereum.
+          </p>
+          <button class="btn btn-green col-xl-3 center-2">Get Started</button>
+        </div>
+        <div class="col-xl-6">
+          <div href="#" class="nav-link-2 col-xl-4 heading logo-two"><img src="./assets/images/philip request.png"
+              alt=""></div>
+        </div>
+
       </div>
-    </section>
-    
+    </div>
+  </section>
+  <div class="main-one">
+    <div class="info-box-top">
+      <p class="heading-one">How it works<p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Itaque magni deserunt et consequuntur! Expedita, veniam neque
+            voluptatibus, vero similique ipsam id incidunt rerum eum nobis ratione,
+            quisquam quae repudiandae nihil?
+          </p>
+    </div>
 
+    <div class="info-box-bottom">
+      <div class="one">
+        <h3>01</h3>
+        <h5>Heading One</h5>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure fuga inventore
+          harum dolores nesciunt nisi modi nam porro sed autem consequatur velit
+          consequuntur pariatur soluta ab molestiae, iste voluptate eaque.
+        </p>
+      </div>
+      <div class="two">
+        <h3>02</h3>
+        <h5>Heading Two</h5>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure fuga inventore
+          harum dolores nesciunt nisi modi nam porro sed autem consequatur velit
+          consequuntur pariatur soluta ab molestiae, iste voluptate eaque.
+        </p>
 
+      </div>
+      <div class="three">
+        <h3>03</h3>
+        <h5>Heading Three</h5>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure fuga inventore
+          harum dolores nesciunt nisi modi nam porro sed autem consequatur velit
+          consequuntur pariatur soluta ab molestiae, iste voluptate eaque.
+        </p>
+      </div>
+    </div>
 
-  <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  </div>
+ 
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
