Modifiations of files

--- a/front_end/login.html
+++ b/front_end/login.html
@@ -17,6 +17,7 @@
     <div class="col-xl-12 flex center login-container">
             <div class="sign_in log_in col-xl-3 flex-wrap center">
                 <h2 class="col-xl-11">Log In</h2>
+                <img src="../front_end/assets/images/rag1.png" alt="">
                 <div class="inputs col-xl-11">
                 <form action="{{ route('login') }}" method="post">
                     <p><input type="text" placeholder="email" class="col-xl-12"></p>
