Modifying content on the landing page

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Escrow | Hompeage</title>
+  <title>Tranz | Hompeage</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -32,11 +32,11 @@
       <div class="row col-xl-11">
         <div class="flex-wrap col-xl-6 hero-text">
           <div class="heading col-xl-12">
-            Tranz is a solution to buying and selling safely using
-            cryptocurrency
+            Tranz is a solution to trading safely online 
+            using blockchain technology
           </div>
           <p class="col-xl-12 extest">
-            Currently accepting Ethereum.
+            Currently accepting ethereum
           </p>
           <button class="btn btn-green col-xl-3 center-2">Get Started</button>
         </div>
@@ -52,40 +52,36 @@
     <div class="info-box-top">
       <p class="heading-one">How it works<p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Itaque magni deserunt et consequuntur! Expedita, veniam neque
-            voluptatibus, vero similique ipsam id incidunt rerum eum nobis ratione,
-            quisquam quae repudiandae nihil?
+            <b>Tranz</b> is an medium which leverages
+            the power of blockchain to create a decentralized
+            online payment system which is safe and secure
+
           </p>
     </div>
 
     <div class="info-box-bottom">
       <div class="one">
         <h3>01</h3>
-        <h5>Heading One</h5>
+        <h5>Initializing a "tranz"</h5>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure fuga inventore
-          harum dolores nesciunt nisi modi nam porro sed autem consequatur velit
-          consequuntur pariatur soluta ab molestiae, iste voluptate eaque.
+          A tranz is initiated when a user accepts to use tranz 
+          as the preffered payment method on supported e-commerce platforms. 
         </p>
       </div>
       <div class="two">
         <h3>02</h3>
-        <h5>Heading Two</h5>
+        <h5>Signing Up</h5>
+        After accepting to use tranz as your preffered payment system either sign up
+        or log in
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure fuga inventore
-          harum dolores nesciunt nisi modi nam porro sed autem consequatur velit
-          consequuntur pariatur soluta ab molestiae, iste voluptate eaque.
         </p>
 
       </div>
       <div class="three">
         <h3>03</h3>
-        <h5>Heading Three</h5>
+        <h5>Get tranzformed</h5>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure fuga inventore
-          harum dolores nesciunt nisi modi nam porro sed autem consequatur velit
-          consequuntur pariatur soluta ab molestiae, iste voluptate eaque.
+          Accelerate your business with tranz.
         </p>
       </div>
     </div>
