made changes to contract.js

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -31,14 +31,14 @@
 
   <body>
     <section class="col-xl-12 section-one">
-      <div class="flex center">
+      <div id="home" class="flex center">
         <nav class="flex col-xl-11">
-          <div href="#" class="nav-link-2 col-xl-4 heading logo">
+          <div class="nav-link-2 col-xl-4 heading logo">
             <img src="./assets/images/rag1.png" alt="" />
           </div>
           <div class="nav-link-2 col-xl-4 center-2">
-            <a href="#" class="nav-link col-xl-4"> HOME</a>
-            <a href="#" class="nav-link col-xl-4"> ABOUT</a>
+            <a href="#home" class="nav-link col-xl-4"> HOME</a>
+            <a href="#about" class="nav-link col-xl-4"> ABOUT</a>
           </div>
           <div class="nav-link col-xl-4 flex right">
             <button
@@ -56,7 +56,7 @@
           </div>
         </nav>
       </div>
-      <div class="flex center">
+      <div id="about" class="flex center">
         <div class="row col-xl-11">
           <div class="flex-wrap col-xl-6 hero-text">
             <div class="heading col-xl-12">
