--- a/front_end/index.html
+++ b/front_end/index.html
@@ -23,7 +23,7 @@
           <a href="#" class="nav-link col-xl-4"> ABOUT</a>
         </div>
         <div class="nav-link col-xl-4 flex right">
-          <button class="btn btn-green col-xl-4" onclick="window.location.href='signup.html'">SIGN UP</button>
+          <button class="btn btn-green2 col-xl-4" onclick="window.location.href='signup.html'">SIGN UP</button>
           <button class="btn btn-light col-xl-4 offset-xl-1" onclick="window.location.href='login.html'">LOG IN</button>
         </div>
       </nav>
@@ -38,7 +38,7 @@
           <p class="col-xl-12 extest">
             Currently accepting ethereum
           </p>
-          <button class="btn btn-green col-xl-3 center-2">Get Started</button>
+          <button class="btn btn-green2 col-xl-3 center-2">Get Started</button>
         </div>
         <div class="col-xl-6">
           <div href="#" class="nav-link-2 col-xl-4 heading logo-two"><img src="./assets/images/philip request.png"
